@@ -7,7 +7,7 @@
     <artifactId>mariadb-java-client</artifactId>
     <packaging>jar</packaging>
     <name>mariadb-java-client</name>
-    <version>3.0.2-rc</version>
+    <version>3.0.3</version>
     <description>JDBC driver for MariaDB and MySQL</description>
     <url>https://mariadb.com/kb/en/mariadb/about-mariadb-connector-j/</url>
 
@@ -20,10 +20,10 @@
         <osgi.version>6.0.0</osgi.version>
         <osgi.compendium.version>5.0.0</osgi.compendium.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <logback.version>1.3.0-alpha5</logback.version>
-        <jacoco.version>0.8.5</jacoco.version>
+        <logback.version>1.3.0-alpha10</logback.version>
+        <jacoco.version>0.8.7</jacoco.version>
         <waffle-jna.version>3.0.0</waffle-jna.version>
-        <mysql-connector-java.version>8.0.26</mysql-connector-java.version>
+        <mysql-connector-java.version>8.0.27</mysql-connector-java.version>
     </properties>
 
     <licenses>
@@ -243,28 +243,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>
-                        --add-reads org.mariadb.jdbc=org.slf4j
-                        --add-reads org.mariadb.jdbc=ch.qos.logback.classic
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.integration=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.integration.codec=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.integration.resultset=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.integration.tools=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.client=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.client.result=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.client.tls=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.plugin=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.type=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.util=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.pool=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.util.constant=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.util.log=ALL-UNNAMED
-                        --add-reads org.mariadb.jdbc=ALL-UNNAMED
-                        --add-opens=java.base/java.util=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
 
         </plugins>
@@ -302,14 +280,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.0-alpha4</version>
+            <version>2.0.0-alpha5</version>
             <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.3.0-alpha10</version>
+            <version>${logback.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -350,15 +328,9 @@
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>${jacoco.version}</version>
-                        <configuration>
-                            <destFile>${jacoco.reportPath}</destFile>
-                            <append>true</append>
-                            <excludes>
-                                <exclude>META-INF/**</exclude>
-                            </excludes>
-                        </configuration>
                         <executions>
                             <execution>
+                                <id>jacoco-initialize</id>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
